--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@
 
 .container {
   position: absolute;
-  height: 100vh;
+  height: 100%;
   width: 100%;
   background-image: radial-gradient(at top, hsl(214, 47%, 23%), hsl(237, 49%, 15%));
 }
